--- a/style.css
+++ b/style.css
@@ -1,5 +1,26 @@
-.my-name {
+.navbar {
+    overflow: hidden;
+    background-color: black;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 150px;
+}
+
+.navbar a {
+    float: left;
+    display: block;
+    color: white;
     text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+#my-name {
+    font-size: 30px;
+    text-align: center;
+    color: white;
 }
 
 .background-photo {
@@ -8,31 +29,4 @@
     background-image: url("../Kamikochi\ Image.JPG");
     background-size: cover;
     background-position: center;
-}
-
-
-.menu {
-    list-style: none;
-    position: fixed;
-    top: 10;
-    width: 100%;
-    margin-top: 10px;
-    overflow: hidden;
-    color: black;
-}
-
-.menu a {
-    float: left;
-    display: block;
-
-    color: blue;
-    text-align: center;
-    font-size: 20px;
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
 }
