--- a/style.css
+++ b/style.css
@@ -1,32 +1,47 @@
-.navbar {
-    overflow: hidden;
-    background-color: black;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 150px;
-}
-
-.navbar a {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 20px;
-}
+* {background-color: lightblue;}
 
 #my-name {
-    font-size: 30px;
     text-align: center;
-    color: white;
+    font-size: 3em;
 }
 
-.background-photo {
-    height: 650px;
-    width: 1,200px;
-    background-image: url("../Kamikochi\ Image.JPG");
-    background-size: cover;
-    background-position: center;
+#navbar a {
+    color: black;
+    font-size: 1.5em;
+    padding: 15px;
+}
+
+#section-1 {
+    max-width: 1,200px;
+}
+#about-me {
+    position: relative;
+    left: 15px;
+    top: 30px;
+}
+
+#about-me-p {
+    padding: 10px;
+    font-size: 1.5em;
+}
+
+#my-pic {
+    float: left;
+    position: relative;
+    top: 10px;
+    max-width: 15%;
+    height: auto;
+    padding: 8px;
+    border: 8px solid black;
+    margin: 8px;
+}
+
+#section-2 a img {
+    max-width: 30%;
+    padding: 8px;
+    border: 8px solid darkslateblue;
+}
+
+#section-2 p {
+    font-size: 1.5em;
 }
